--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,95 +1,1 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-
-        <title>Open Game Backend - Admin</title>
-    </head>
-    <body>
-        <div id="contents">
-            <div class="container">
-                <h1>Open Game Backend - Admin</h1>
-
-                <nav v-if="$store.state.token">
-                    <ul class="nav nav-tabs">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Servers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Queue</a>
-                        </li>
-                    </ul>
-                </nav>
-
-                <form v-if="!$store.state.token">
-                    <div class="form-group">
-                        <label for="userIdInput">User ID</label>
-                        <input type="text" class="form-control" id="userIdInput" v-model="userId">
-                    </div>
-                    <div class="form-group">
-                        <label for="passwordInput">Password</label>
-                        <input type="password" class="form-control" id="passwordInput">
-                    </div>
-                    <div class="alert alert-danger" role="alert" v-if="errorMessage">
-                        {{ errorMessage }}
-                    </div>
-                    <button type="button" v-on:click="postLogin" class="btn btn-primary">Login</button>
-                </form>
-            </div>
-        </div>
-
-        <script th:src="@{/js/vue.js}" type="text/javascript"></script>
-        <script th:src="@{/js/vuex.js}" type="text/javascript"></script>
-        <script th:src="@{/js/axios.min.js}" type="text/javascript"></script>
-
-        <script type="text/javascript">
-            const gatewayUrl = 'http://localhost:9000';
-
-            Vue.use(Vuex)
-
-            const store = new Vuex.Store({
-                state: {
-                    token: ''
-                },
-                mutations: {
-                    setToken (state, newToken) {
-                        state.token = newToken
-                    }
-                }
-            });
-
-            var app = new Vue({
-                el: '#contents',
-                store,
-                data: {
-                    userId: '',
-                    errorMessage: ''
-                },
-                methods: {
-                    postLogin: function () {
-                        axios.post(gatewayUrl + '/open-game-backend-auth/login', {
-                            'playerId': this.userId
-                        })
-                        .then(response => {
-                            this.errorMessage = '';
-
-                            console.log(response.data.token);
-
-                            store.commit('setToken', response.data.token)
-                        })
-                        .catch(error => {
-                            if (error.response) {
-                              this.errorMessage = error.response.data.errorMessage;
-                            } else {
-                              this.errorMessage = error.message;
-                            }
-                        });
-                    }
-                }
-            });
-        </script>
-    </body>
-</html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><link rel=icon href=/favicon.ico><link rel=stylesheet href=/bootstrap.min.css><title>open-game-backend-admin</title><link href=/js/app.59eb15f9.js rel=preload as=script><link href=/js/chunk-vendors.a0babe3d.js rel=preload as=script></head><body><noscript><strong>We're sorry but open-game-backend-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.a0babe3d.js></script><script src=/js/app.59eb15f9.js></script></body></html>
